--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>git</title>
 </head>
 <body>
-   <h1>hi eneb</h1> 
+    
+   <h1>hi eneb</h1>
+    <script> you can change the world qonjit</script>
 </body>
 </html>
