--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     
    <h1>hi eneb</h1>
-    <script> you can change the world qonjit</script>
+    <script> 
+    alert(' you can change the world qonjit')
+   </script>
 </body>
 </html>
